# bdd.py

./: .gitignore  LICENSE
fuente/: README.MD  pyproject.toml  setup.py
fuente/bdd/: __init__.py  bdd.py  pruebas.py  registro.py  tabla.py  utiles.py
fuente/bdd/errores/: __init__.py
fuente/bdd/tipos/: __init__.py  enum_sql.py
fuente/chastack_bdd/: __init__.py  bdd.py  pruebas.py  registro.py  tabla.py  utiles.py
fuente/chastack_bdd/tipos/: __init__.py  enum_sql.py
