[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bdd"
version = "0.1.0"
authors = [
  { name="Hernán A.T.N.", email="herni@cajadeideas.ar" },
  { name="Joaquín Correa" },
  { name="Camila M.T.N.", email="cmteszkiewicz@gmail.com" },
]
description = "Abstracción de Bases de Datos en Python y constructor de modelos."
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    'sobrecargar',
]

[project.urls]
"Homepage" = "https://github.com/Hernanatn/bdd.py"